[tool.poetry]
authors = ["Igor Kozyrenko <igor@ikseek.com>"]
description = "ISO 4217 currency code library"
name = "iso_4217"
readme = "README.rst"
repository ="https://github.com/ikseek/iso_4217"
version = "0.1.180829"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
