[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
authors = ["Igor Kozyrenko <igor@ikseek.com>"]
description = "ISO 4217 currency code library"
name = "iso_4217"
readme = "README.rst"
repository = "https://github.com/ikseek/iso_4217"
version = "0.3.211001"

[tool.poetry.dependencies]
python = "^3.6.1"
pint = {version = "^0.16", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.7.1"

[tool.poetry.extras]
pint = ["pint"]
