[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
authors = ["Igor Kozyrenko <igor@ikseek.com>"]
description = "ISO 4217 currency code library"
name = "iso_4217"
readme = "README.rst"
repository = "https://github.com/ikseek/iso_4217"
version = "0.4.220401"
classifiers = [
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.6.1"
pint = {version = "^0.16", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.7.1"

[tool.poetry.extras]
pint = ["pint"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob '*.rst'"
