[metadata]
author = Igor Kozyrenko
author_email = igor@ikseek.com
description = ISO 4217 currency code library
license = MIT
name = iso_4217
long_description = file: README.rst
repository = https://github.com/ikseek/iso_4217
version = attr: iso_4217.__version__
classifiers =
    Intended Audience :: Financial and Insurance Industry
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=3.6.1, <4
zip_safe = True

[options.package_data]
* = data/*.xml

[options.extras_require]
pint = Pint>=0.16
test = pytest

[bdist_wheel]
universal = True

[tool:pytest]
addopts = --doctest-modules --doctest-glob '*.rst'
